# spotify-playlist-updater

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yaml
res/: docstring-template.moustache
src/: client.py  main.py  utils.py
tests/: test_src.py
