[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Poetry package for easy Python repo creation"
authors = ["Clément Sicard <clement@sicard.ch>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.3"
isort = "^5.12.0"
interrogate = "^1.7.0"

# 1.7.1 is NOT compatible with ARM-based Macs
mypy = "1.7.0"

pre-commit = "^3.6.2"
pytest = "^8.2.2"
poetry-plugin-export = "^1.6.0"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-module = true
fail-under = 100
verbose = 2


[tool.ruff]
line-length = 120
show-source = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
color = true

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_ignores = false
files = "**/*.py"

[tool.pytest.ini_options]
testpaths = ["./tests/"]
# tests should fail if there is any warning => except the following nones:
filterwarnings = ["error"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
